@@ -1,5 +1,8 @@
 2012-04-16  Jason Merrill  <jason@redhat.com>
 
+	PR c++/50830
+	* g++.dg/cpp0x/variadic129.C: New.
+
 	PR c++/50303
 	* g++.dg/cpp0x/variadic128.C: New.
 
